syntax="proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

service Greeter {
    rpc sayHello(HelloRequest) returns(HelloReply);
}

message HelloRequest{
    string name=1;
    int32 score=2;
}

message HelloReply{
    string message = 1;
}